retry to generate token via keycloak